Fix overflow bug in responsive design

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -150,10 +150,6 @@ footer a i:hover {
     margin-top: 32px;
 }
   
-.input-icons {
-
-}
-  
 .input-field {
     width: 100%;
     padding: 10px;
